# x-algorithm

./: .gitignore  CLAUDE.md  PHASE2_COMPLETE.md  REC_SYS_OUTLINE.md  RUNPOD_SETUP.md  human_guide.md
phoenix/: INSTALL.md  TRAINING_READY.md  ecommerce_config.py  ecommerce_ranking_model.py  pyproject.toml  setup_gpu.sh  test_ecommerce_model.py  test_recsys_model.py  test_recsys_retrieval_model.py  train_ecommerce_ranking.py
phoenix/data/: README.md  ecommerce_dataset.py  prepare_retail_rocket.py  requirements.txt  test_data_loading.py
phoenix/data/processed/: statistics.json  test_sequences.pkl  val_sequences.pkl
phoenix/retail_rocket/: xAI_rec_sys.code-workspace
