[project]
name = "grok-1"
version = "0.1.0"
description = "Grok-1 model"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dm-haiku>=0.0.13",
    "jax>=0.4.20",
    "numpy>=1.26.4",
    "pandas>=2.0.0",
    "optax>=0.2.0",
    "tqdm>=4.66.0",
    "pyright>=1.1.408",
]

[project.optional-dependencies]
# NOTE: GPU-enabled JAX cannot be installed via pyproject.toml
# For GPU training, use: bash setup_gpu.sh
# Or manually: pip install "jax[cuda12_pip]" -f https://storage.googleapis.com/jax-releases/jax_cuda_releases.html
cuda12 = [
    "jax[cuda12]>=0.4.20",  # Placeholder - does NOT enable GPU, use setup_gpu.sh instead
]
cuda11 = [
    "jax[cuda11_pip]>=0.4.20",  # Placeholder - does NOT enable GPU, use setup_gpu.sh instead
]

[tool.uv]
environments = [
    "sys_platform == 'darwin'",
    "sys_platform == 'linux'",
    "sys_platform == 'win32'",
]

[tool.ruff]
indent-width = 4
line-length = 100

[tool.ruff.lint]
ignore = [
    "E722",
    "E731",
    "E741",
    "F405",
    "E402",
    "F403",
]
select = ["ISC001"]

[dependency-groups]
dev = [
    "pytest",
]
